--- a/manifest.json
+++ b/manifest.json
@@ -27,12 +27,16 @@
     "default_popup": "popup/popup.html"
   },
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
 
   "options_page": "options/options.html",
-  "permissions": ["tabs", "alarms", "storage", "notifications", "downloads", "identity"],
+  "permissions": ["tabs", "alarms", "storage", "notifications", "downloads", "identity", "webRequest", "webNavigation"],
   "host_permissions": ["https://www.googleapis.com/calendar/v3/calendars/primary", "https://www.googleapis.com/*"],
+  "externally_connectable" : {
+    "matches": [ "<all_urls>" ]
+  },
   "web_accessible_resources": [
     {
       "resources": ["options/options.html"],
